--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <title>Innovision'19</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="inno, innovision,innovision nitrkl">
+    <meta name="description" content="Innovision, the annual techno-management fest of NIT Rourkela is organized in the first week of November spanning over three days and three nights. Commenced with a motto of providing technocrats all over the country a platform to showcase their technical skills and talent, Innovision has come a long way over the years since its inception.">
+
+
+    <meta property="og:title" content="Innovision 2019 - The Tech-fest of NIT Rourkela, India">
+    <meta property="og:description" content="Innovision, the annual techno-management fest of NIT Rourkela is organized in the first week of November spanning over three days and three nights. Commenced with a motto of providing technocrats all over the country a platform to showcase their technical skills and talent, Innovision has come a long way over the years since its inception.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://innonitr.com/">
+    <meta property="og:image" content="https://innonitr.com/assets/images/Innovision_Logo.png">
+    <meta property="og:image:width" content="806">
+    <meta property="og:image:height" content="280">
+    <!-- <meta property="fb:app_id" content="800979823283025">
+    <meta property="fb:pages" content="146541445376828"> -->
 
     <!-- Favicons -->
     <link href="assets/images/Innovision_Logo.ico" rel="icon">
