--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                             <a href="views/eventsSection.html#events1">Events</a>
                             <a href="views/eventsSection.html#workshops1">Workshops</a>
                             <a href="views/eventsSection.html#workshops2">Workshops (Paid)</a>
+                        	<a href="views/eventsSection.html#guestlect">Guest Lectures</a>
                             <a href="views/eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="views/eventsSection.html#cultural1">Pro Shows</a>
                         	<a href="views/eventsSection.html#funevents1">Fun Events</a>
