--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <div class="modal-body">
             
             
-            <p style="color: #000;  font-family: 'Open Sans';">Ritik Purohit:<a href="tel:7008546399" style="margin-left: 10px;"><i class="fa fa-phone">7008546399</i></a></p>
+            <p style="color: #000;  font-family: 'Open Sans';">krishnaja:<a href="tel:6281630205" style="margin-left: 10px;"><i class="fa fa-phone">6281630205</i></a></p>
             <p style="color: #000;  font-family: 'Open Sans';">Sakshi Kumari:<a href="tel:7482975066" style="margin-left: 10px;"><i class="fa fa-phone">7482975066s</i></a></p>
 
       </div>
