--- a/index.html
+++ b/index.html
@@ -250,6 +250,119 @@
             </div>
 
         </section>
+        <section id="pro" class="section-with-bg wow fadeInUp">
+
+            <div class="container-fluid">
+
+                <div class="section-header">
+                    <h2>Pro Shows</h2>
+                    <!--<p>moments captured during Innovision'18</p>-->
+                </div>
+            </div>
+
+            <div class="container-fluid venue-gallery-container">
+                <div class="row no-gutters">
+
+                    <div class="col-lg-4 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/1.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC_0081.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/2-8.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/2-8.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC00048-2-2.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC00048-2-2.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="offset-lg-2 col-lg-4 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC00289.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC00289.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC_0069.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC_0069.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                   <!-- <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC_0081.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC_0081.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC_0179.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC_0179.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC_2590.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC_2590.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC_4868-4.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC_4868-4.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/DSC_6207.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/DSC_6207.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/IMG_1782.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/IMG_1782.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-md-4">
+                        <div class="venue-gallery">
+                            <a href="assets/images/home_page_gallery/IMG_7685.jpg" class="venobox" data-gall="venue-gallery">
+                                <img src="assets/images/home_page_gallery/IMG_7685.jpg" alt="" class="img-fluid">
+                            </a>
+                        </div>
+                    </div>-->
+
+                </div>
+            </div>
+
+        </section>
 
         <!-- ========== -->
 
