added pro shows

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <div class="youtube-link col-lg-7 col-md-7 col-sm-7 col-12">
                 <center>
                     <div class="venue-gallery">
-                                <a href="assets/images/pro_shows/1.jpg" class="venobox" data-gall="venue-gallery">
+                                <a href="https://innonitr.com/views/event-details.html?eid=28">
                                     <img src="https://innonitr.com/assets/images/events/eid_28.jpg" width="45%" alt="" class="img-fluid">
                                 </a>
                     </div>
@@ -299,7 +299,7 @@
               <div class="youtube-link col-lg-7 col-md-7 col-sm-7 col-12">
                 <center>
                    <div class="venue-gallery">
-                                <a href="assets/images/pro_shows/2.jpeg" class="venobox" data-gall="venue-gallery">
+                                <a href="https://innonitr.com/views/event-details.html?eid=42">
                                     <img src="https://innonitr.com/assets/images/events/eid_42.jpg" width="45%" alt="" class="img-fluid">
                                 </a>
                     </div>
@@ -320,7 +320,7 @@ Get ready to enjoy a wonderful time and don’t forget, Hassi toh Bassi!"</h2>
               <div class="youtube-link col-lg-7 col-md-7 col-sm-7 col-12">
                 <center>
                    <div class="venue-gallery">
-                                <a href="assets/images/pro_shows/3.jpg" class="venobox" data-gall="venue-gallery">
+                                <a href="https://innonitr.com/views/event-details.html?eid=141" >
                                     <img src="https://innonitr.com/assets/images/events/eid_141.jpg" width="45%" alt="" class="img-fluid">
                                 </a>
                     </div>
@@ -342,7 +342,7 @@ Do not hesitate anymore and Book your tickets for this SPACE OPERA now!"</h2>
               <div class="youtube-link col-lg-7 col-md-7 col-sm-7 col-12">
                 <center>
                    <div class="venue-gallery">
-                                <a href="assets/images/pro_shows/4.jpg" class="venobox" data-gall="venue-gallery">
+                                <a href="https://innonitr.com/views/event-details.html?eid=144" >
                                     <img src="https://innonitr.com/assets/images/events/eid_144.jpg" width="45%" alt="" class="img-fluid">
                                 </a>
                     </div>
@@ -362,7 +362,7 @@ Do not hesitate anymore and Book your tickets for this SPACE OPERA now!"</h2>
               <div class="youtube-link col-lg-7 col-md-7 col-sm-7 col-12">
                 <center>
                    <div class="venue-gallery">
-                                <a href="assets/images/pro_shows/5.jpg" class="venobox" data-gall="venue-gallery">
+                                <a href="https://innonitr.com/views/event-details.html?eid=146" >
                                     <img src="https://innonitr.com/assets/images/events/eid_146.jpg" width="45%" alt="" class="img-fluid">
                                 </a>
                     </div>
