different token for ca admin

--- a/index.html
+++ b/index.html
@@ -267,25 +267,21 @@
 
         <div class="carousel-inner">
 
-          <div class="carousel-item active container-fluid">
-            <div class="quote-row row">
+<!--           <div class="carousel-item active container-fluid">
 
               <div class="col-lg-5 col-md-5 col-sm-5 col-12">
                 <h2 class="quote-text">"Art is how we decorate space and music is how we decorate time" Come, this Innovision we, Euphony, will take you on a journey you can't forget, a journey to resonate, a journey where we will make music in space. Be a part of something bigger than yourself, something you can cherish and something to look forward to. Euphony Live @ 6:30 pm in DTS."</h2>
                 
               </div>
+          </div> -->
+        
+        <div class="carousel-item active container-fluid">
 
-              <div class="youtube-link col-lg-7 col-md-7 col-sm-7 col-12">
-                <center>
-                    <div class="venue-gallery">
-                                <a href="https://innonitr.com/views/event-details.html?eid=28">
-                                    <img src="https://innonitr.com/assets/images/events/eid_28.jpg" width="45%" alt="" class="img-fluid">
-                                </a>
-                    </div>
-                </center>
+              <div>
+                	<a href="https://innonitr.com/views/event-details.html?eid=28" >
+                          <img src="https://innonitr.com/assets/images/events/eid_28.jpg" alt="" class="img-fluid quote-img">
+                    </a>  
               </div>
-
-            </div>
           </div>
 
           <div class="carousel-item container-fluid">
