--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
                         <div class="dropdown-content">
                             <a href="views/eventsSection.html#EventsSection">Event Schedule</a>
                             <a href="views/eventsSection.html#flagships1">Flagship Events</a>
-                        	<a href="views/eventsSection.html#preinnoevents1">Pre-inno Events</a>
+                            <a href="views/eventsSection.html#preinnoevents1">Pre-inno Events</a>
                             <a href="views/eventsSection.html#events1">Events</a>
                             <a href="views/eventsSection.html#workshops1">Workshops</a>
                             <a href="views/eventsSection.html#workshops2">Workshops (Paid)</a>
-                        	<a href="views/eventsSection.html#guestlect">Guest Lectures</a>
+                            <a href="views/eventsSection.html#guestlect">Guest Lectures</a>
                             <a href="views/eventsSection.html#exhibitions1">Exhibitions</a>
                             <a href="views/eventsSection.html#cultural1">Pro Shows</a>
-                        	<a href="views/eventsSection.html#funevents1">Fun Events</a>
-                        	<a href="views/eventsSection.html#special1">Special Events</a>
+                            <a href="views/eventsSection.html#funevents1">Fun Events</a>
+                            <a href="views/eventsSection.html#special1">Special Events</a>
                         </div>
 
                     </li>
@@ -153,7 +153,7 @@
         <div class="carousel-item active container-fluid">
 
               <div>
-                	<a href="https://innonitr.com/views/event-details.html?eid=28" >
+                    <a href="https://innonitr.com/views/event-details.html?eid=28" >
                           <img src="https://innonitr.com/assets/images/events/eid_28.jpg" alt="" class="img-fluid quote-img">
                     </a>  
               </div>
@@ -162,7 +162,7 @@
           <div class="carousel-item container-fluid">
 
               <div>
-                	<a href="https://innonitr.com/views/event-details.html?eid=42" >
+                    <a href="https://innonitr.com/views/event-details.html?eid=42" >
                           <img src="https://innonitr.com/assets/images/events/eid_42.jpg" alt="" class="img-fluid quote-img">
                     </a>  
               </div>
@@ -170,7 +170,7 @@
          <div class="carousel-item container-fluid">
 
               <div>
-                	<a href="https://innonitr.com/views/event-details.html?eid=141" >
+                    <a href="https://innonitr.com/views/event-details.html?eid=141" >
                           <img src="https://innonitr.com/assets/images/events/eid_141.jpg" alt="" class="img-fluid quote-img">
                     </a>  
               </div>
@@ -178,7 +178,7 @@
           <div class="carousel-item container-fluid">
 
               <div>
-                	<a href="https://innonitr.com/views/event-details.html?eid=144" >
+                    <a href="https://innonitr.com/views/event-details.html?eid=144" >
                           <img src="https://innonitr.com/assets/images/events/eid_144.jpg" alt="" class="img-fluid quote-img">
                     </a>  
               </div>
@@ -186,7 +186,7 @@
           <div class="carousel-item container-fluid">
 
               <div>
-                	<a href="https://innonitr.com/views/event-details.html?eid=146" >
+                    <a href="https://innonitr.com/views/event-details.html?eid=146" >
                           <img src="https://innonitr.com/assets/images/events/eid_146.jpg" alt="" class="img-fluid quote-img">
                     </a>  
               </div>
@@ -435,6 +435,31 @@
             </div>
             <div class="credits">
                 Designed by <a href="#">Innovision Tech Team</a>
+                <!-- Trigger the modal with a button -->
+                <a style="display:block;"  data-toggle="modal" data-target="#myModal">Privacy Policy</a> 
+
+                <!-- Modal -->
+                <div id="myModal" class="modal fade" role="dialog">
+                  <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                      <div class="modal-header" style="display: block;">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Privacy Policy</h4>
+                      </div>
+                      <div class="modal-body">
+                        <p style="color:black;">We are using <a href="https://www.thecollegefever.com/">TheCollegeFever(TCF)</a> as the payment solution for Innovision.
+For that purpose we share your personal information like name,email,phone number,address with TCF
+With the notice that your information is shared with TCF, if your personal information/data is misused or used unwantedly by TCF in <b>ANY MEANS</b> Team Innovision and NIT Rourkela wont be responsible for that, TCF would be responsible solely for any such actions/incidents.</p>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+
+                  </div>
+                </div>
             </div>
         </div>
     </footer>
